--- a/_posts/2017-01-13-well-2.markdown
+++ b/_posts/2017-01-13-well-2.markdown
@@ -2,7 +2,7 @@
 layout: post
 title: Well…
 date: '2017-01-13 18:21:19'
-image: fontain.jpg
+image: /content/ fontain.jpg
 tags:
 - personliches
 - bilder
