--- a/_posts/2019-02-26-Goodbye.md
+++ b/_posts/2019-02-26-Goodbye.md
@@ -6,7 +6,7 @@ tags:
 - gestorben
 - '2019'
 - synthiepop
-image: "/shadow.jpg"
+image: /content/ "/shadow.jpg"
 date: 2019-02-26 20:30:23 +0000
 category: ''
 
