--- a/_posts/2019-04-30-Townes.md
+++ b/_posts/2019-04-30-Townes.md
@@ -2,7 +2,7 @@
 layout: post
 title: Our Mother The Mountain
 date: 30.4.2019, 20:00:04
-image: townes.jpg
+image: /content/ townes.jpg
 tags:
 - musique
 - gefühlt
