--- a/_posts/2019-04-19-My-World.md
+++ b/_posts/2019-04-19-My-World.md
@@ -2,7 +2,7 @@
 layout: post
 title: Welcome to my world
 date: 19.4.2019, 01:00:31
-image: /content/ telefon.jpg
+image: /content/images/telefon.jpg
 tags:
  - gefühlt
  - gedacht
