--- a/_posts/2018-12-09-INXS.markdown
+++ b/_posts/2018-12-09-INXS.markdown
@@ -2,16 +2,16 @@
 layout: post
 title: In Excess!!!
 date: '19:21 2018-12-09'
-image: /content/ tape.jpg
-tags: 
+image: /content/images/tape.jpg
+tags:
  - inxs
  - persönlich
  - gedanken
  - musik
 ---
 
-Wisst ihr was ich ziemlich mag? *Mögen* ist vieleicht der falsche Ausdruck… wisst ihr wofür ich immer 
-wieder und wieder ein *Faible* habe? Für gestrauchelte Personen. Für Menschen bei denen nicht alles glatt 
+Wisst ihr was ich ziemlich mag? *Mögen* ist vieleicht der falsche Ausdruck… wisst ihr wofür ich immer
+wieder und wieder ein *Faible* habe? Für gestrauchelte Personen. Für Menschen bei denen nicht alles glatt
 läuft. Oder glatt lief. Die an irgendwas zerbrochen sind vielleicht. Die sich gegen den eigentlichen Duktus dieser unserer Gesellschaft erhoben haben, nicht mehr mitspielen konnten, schwach wurden, Druck nicht aushielten… und abstürzten. Zerschmetterten. Psychisch oder physisch, oft geht ja beides Hand in Hand. <!--more-->
 
 Warum ich nun aber ein *Faible* [^1] dafür habe? Eins Vorweg: ich meine das nicht *heroisch*. Ich meine das nicht erstrebenswert. Ich meine nur, dass ich es nachvollziehen kann. Dass ich mir hin und wieder ausmalen mag, wie das wohl gewesen sein muss. Und dass ich oft feststelle, dass es irgendwie, irgendwo… meist aber nicht nur irgendwann sondern immer, besondere Menschen sind. Meist im kulturellen Bereich besondere Dinge geleistet haben. Sicher auch sehr sensibel sind. Aber eben besonders.
