--- a/_posts/2015-08-03-the-end.markdown
+++ b/_posts/2015-08-03-the-end.markdown
@@ -2,23 +2,23 @@
 layout: post
 title: The End
 date: '2015-08-03 19:04:11'
-image: /content/ nico.jpg
-tags: 
+image: /content/images/nico.jpg
+tags:
  - musik
  - vinyl
  - persönlich
 ---
 
 
-**Das** ging schnell. Schneller als ich dachte. Schneller als alle dachten. Und doch war es absehbar, steuerte alles all die letzte Zeit darauf hin. Wie ein Schiff auf eine Klippe eben. Oder ich auf den Abgrund. 
+**Das** ging schnell. Schneller als ich dachte. Schneller als alle dachten. Und doch war es absehbar, steuerte alles all die letzte Zeit darauf hin. Wie ein Schiff auf eine Klippe eben. Oder ich auf den Abgrund.
 
-> Wir sind drei Schritte vom Abgrund entfernt 
+> Wir sind drei Schritte vom Abgrund entfernt
 
 Höre ich Tocotronic singen. Wehklagen? Nein, schreien viel mehr. Aber egal. Nichts ist jetzt ferner als Tocotronic. Oder Ton Steine Scherben? Die sind näher. Viel näher. Es war ziemlich klar, eigentlich von Beginn an war klar, dass es nicht funktionieren wird. Und doch gab es da Hoffnung, das Unbeschwerte des Neuen und die Unbekümmertheit von durch Alkohol geschwängerten Nächten. Und so musste es scheitern.
 
 Übrig ist nicht mal ein Scherbenhaufen, weil es gar nichts zu zerbrechen gab. Oder doch? Weil das Herz schwer ist. Voll mit Wehmut dahindümpelt und die Gedanken um das Vergangene kreisen. Wie Weise. Oder Unweise, hat man sich doch wider besseren Wissens darauf eingelassen. Es ist zum Hassen. "I Hate Myself and I want to die" sagte dereinst jener kluge *Kurt Cobain*, der leider mit 27 eben jenem Klub beitreten musste - und in meinen Augen bis heute ein herber Verlust für die Menschheit bedeutet.
 
-Aber … 
+Aber …
 
 *Nichts bleibt spannend!*
 
