--- a/_posts/2017-04-06-untitled-10.markdown
+++ b/_posts/2017-04-06-untitled-10.markdown
@@ -2,7 +2,7 @@
 layout: post
 title: Bells
 date: '2017-04-06 08:47:23'
-image: /content/ roseprosl.jpg
+image: /content/images/ roseprosl.jpg
 tags:
 - personlich
 - rk
