--- a/_posts/2018-12-01-its-nico.markdown
+++ b/_posts/2018-12-01-its-nico.markdown
@@ -2,7 +2,7 @@
 layout: post
 title: It's Nico!
 date: '20:47 2018-12-01'
-image: /content/ nico.jpg
+image: /content/images/ nico.jpg
 tags: 
  - musik
  - vinyl
