--- a/_posts/2015-08-03-the-end.markdown
+++ b/_posts/2015-08-03-the-end.markdown
@@ -2,7 +2,7 @@
 layout: post
 title: The End
 date: '2015-08-03 19:04:11'
-image: /content/images/nico.jpg
+image: /content/images/small/nico.jpg
 tags:
  - musik
  - vinyl
