minor changes on posts

--- a/_posts/2018-12-09-INXS.markdown
+++ b/_posts/2018-12-09-INXS.markdown
@@ -8,6 +8,7 @@ tags:
  - persönlich
  - gedanken
  - musik
+ - vinyl
 ---
 
 Wisst ihr was ich ziemlich mag? *Mögen* ist vieleicht der falsche Ausdruck… wisst ihr wofür ich immer
