--- a/_posts/2019-04-19-My-World.md
+++ b/_posts/2019-04-19-My-World.md
@@ -13,7 +13,7 @@ tags:
 **Wohl!** *Wie oft habe ich dieses Wort eigentlich schon verwendet*? "Das ist eine gute Frage"! Ich meine hierbei übrgigens nicht die Frage nach dem *Wohl* in Form von "Wohl an" oder…, sondern als Ausruf. Als Zeichen. WOHL! In Form von *So ist es* oder *So sei es*! Dieses Wohl meine ich. Verstehen Sie mich?
 Wir wünschen uns oft, besonders zu sein. Das hängt mit unserem unbändigen Willen nach Sinn zusammen. Sinn und Exstenz. Also Sinn für Existenz. Denn für irgendwas muss das alles doch irgendwie mit einem großen Plan zusammen hängen, oder etwa nicht? Am Ende muss diese ganze Schwierigkeit im Leben, all diese Tiefen, die müssen doch eigentlich irgendwann und irgendwie, irgendwo [^1], und wenn es nur ein Parallel-Universum ist, also… da muss das alles doch Sinn machen, oder?
 
-Ja! Das wünsche mir.
+Ja! Das wünsche ich mir.
 
 > I want you to notice <br />
 > When I'm not around <br />
